[package]
name = "zorder"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Elias Kauppi"]
description = "Fast Z-order curve conversions"
homepage = "https://github.com/kauppie/zorder"
repository = "https://github.com/kauppie/zorder"
documentation = "https://docs.rs/zorder"
readme = "README.md"
keywords = ["z-order", "bmi2", "morton"]
categories = ["algorithms", "hardware-support", "no-std::no-alloc"]

[dependencies]
num-traits = "0.2"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[features]
default = ["std"]
std = []

[[bench]]
name = "software_zorder"
harness = false

[[bench]]
name = "bmi2_zorder"
harness = false
